force-app/main/default/objects/TRANSACTION__c/TRANSACTION__c.object-meta.xml
<CustomObject>
    <label>TRANSACTION</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRANSACTIONS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>