force-app/main/default/objects/TRANSACTION__c/fields/Days_before_transaction_made__c.field-meta.xml
<CustomField>
    <fullName>Days_before_transaction_made__c</fullName>
    <formula>NOW() -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days before transaction made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>