force-app/main/default/objects/TRANSACTION__c/fields/Transaction_From_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_From_Account_Number__c</fullName>
    <label>Transaction From (Account Number)</label>
    <referenceTo>ACCOUNT__c</referenceTo>
    <relationshipLabel>TRANSACTIONS</relationshipLabel>
    <relationshipName>TRANSACTIONS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>