force-app/main/default/objects/TRANSACTION__c/recordTypes/for_all.recordType-meta.xml
<RecordType>
    <fullName>for_all</fullName>
    <active>true</active>
    <label>for all</label>
</RecordType>