force-app/main/default/objects/TRANSACTION__c/validationRules/Saving_Account_Balance_Check_In_Trans.validationRule-meta.xml
<ValidationRule>
    <fullName>Saving_Account_Balance_Check_In_Trans</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
 ISPICKVAL( Transaction_Type__c , &apos;Withdraw&apos;) &amp;&amp; 
 ISPICKVAL( Transaction_From_Account_Number__r.Account_Type__c, &apos;Saving Account&apos;) &amp;&amp;  (Transaction_From_Account_Number__r.Available_Balance_In_Account__c -  Transaction_Amount__c &gt; 10000)
, 

false, 

true
)</errorConditionFormula>
    <errorDisplayField>Transaction_Amount__c</errorDisplayField>
    <errorMessage>Saving Account&apos;s minimum balance cannot be less than 10000</errorMessage>
</ValidationRule>