force-app/main/default/objects/TRANSACTION__c/validationRules/Saving_Minor_Account_Balance_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Saving_Minor_Account_Balance_Check</fullName>
    <active>false</active>
    <errorConditionFormula>IF( 
ISPICKVAL( Transaction_Type__c , &apos;Withdraw&apos;) &amp;&amp; 
 ISPICKVAL( Transaction_From_Account_Number__r.Account_Type__c , &apos;Saving Minor Account&apos;) &amp;&amp;  (Transaction_From_Account_Number__r.Available_Balance_In_Account__c -  Transaction_Amount__c &gt; 2500)
, 

false, 

true
)</errorConditionFormula>
    <errorDisplayField>Transaction_Amount__c</errorDisplayField>
    <errorMessage>Saving Minor Account&apos;s minimum balance cannot be less than 2500</errorMessage>
</ValidationRule>