force-app/main/default/objects/TRANSACTION__c/validationRules/Transaction_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Transaction_Amount__c &lt;= 0,

 true,

 false)</errorConditionFormula>
    <errorDisplayField>Transaction_Amount__c</errorDisplayField>
    <errorMessage>Transaction amount should be greater than 0.</errorMessage>
</ValidationRule>