force-app/main/default/objects/TRANSACTION__c/listViews/All_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Transaction_From_Account_Number__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
</ListView>